# yolov10-triton-jetson

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  triton_client.h  yolov10.h
servers/: setup_triton.sh
servers/model_repository/yolov10m/: config.pbtxt
src/: main.cpp  triton_client.cpp  yolov10.cpp
